사실상 첫 업로드

--- a/극장좌석예약 연습.html
+++ b/극장좌석예약 연습.html
@@ -64,7 +64,7 @@
                 }
             }
     }
-
+       // git 공부 어렵네요 ㅎㅎㅎ ^^^
        //btns[0].addEventListener("click" , reserv);
        //btns.addEventListener("click" , changeColor);
        // btns.onclick=reserv;
